<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/nacimiento"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtApellido"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/apellido"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <TextView
        android:id="@+id/genero"
        android:layout_width="124dp"
        android:layout_height="32dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/genero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApellido" />

    <Spinner
        android:id="@+id/cbxGenero"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/genero"
        app:layout_constraintTop_toBottomOf="@+id/txtApellido" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="126dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/nacimiento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genero" />

    <EditText
        android:id="@+id/txtFecha"
        android:focusable="false"
        android:clickable="true"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/txtfecha"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/cbxGenero" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="174dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="16dp"
        android:text="@string/pregunta"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="124dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/lenguaje"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="16dp"
        android:text="@string/java"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginStart="296dp"
        android:layout_marginTop="16dp"
        android:text="@string/js"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="16dp"
        android:text="@string/python"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="296dp"
        android:layout_marginTop="16dp"
        android:text="@string/c"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="16dp"
        android:text="@string/c1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="296dp"
        android:layout_marginTop="16dp"
        android:text="@string/go"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox4" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/benviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox5" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/blimpiar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.629"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/checkBox5" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/txtFecha">

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/si" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="86dp"
            android:layout_height="match_parent"
            android:checked="false"
            android:text="@string/no" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>